--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-prototype",
   "description": "GOVUK prototyping app in Express",
-  "version": "5.1.0",
+  "version": "5.0.1",
   "private": true,
   "engines": {
     "node": ">=6.0 <7.0"
@@ -21,15 +21,16 @@
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
     "govuk-elements-sass": "2.2.1",
-    "govuk_frontend_toolkit": "5.1.1",
+    "govuk_frontend_toolkit": "5.0.2",
     "govuk_template_jinja": "0.19.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.1.0",
-    "gulp-sass": "3.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
+    "js-yaml": "^3.4.3",
     "marked": "^0.3.6",
     "minimist": "0.0.8",
     "nunjucks": "^2.5.2",
